Fix copy button z-index

--- a/docs/src/components/Demo/Demo.css
+++ b/docs/src/components/Demo/Demo.css
@@ -311,6 +311,7 @@
 
   .DemoCodeBlockCopyButton {
     position: absolute;
+    z-index: 3;
     top: 0.5rem;
     right: 0.5rem;
     background-color: color-mix(in srgb, var(--gray-s1), transparent 10%);
